--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "react-ts",
-  "private": true,
-  "version": "0.0.0",
+  "name": "weather-ignite",
+  "private": false,
+  "version": "0.0.1",
+  "author": {
+    "name": "Virak Khun"
+  },
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
