--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-ignite",
+  "name": "blog-post",
   "private": false,
   "version": "0.0.1",
   "author": {
@@ -13,14 +13,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/js-cookie": "^3.0.2",
     "@types/react-redux": "^7.1.24",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
+    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
