--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,3 @@
 [[redirects]]
-  from = "/"
-  to = "/"
-
-[[redirects]]
-  from = '/post/create'
-  to = '/post/create'
-
-[[redirects]]
-  from = '/login'
-  to = '/login'
-
-[[redirects]]
-  from = '/register'
-  to = '/register'
-
-[[redirects]]
-  from = '/post'
-  to = '/post'
-  query = {postId = ':postId'}
+  from = "*"
+  to = "/index.html"
