--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=https://blog-mini-server.herokuapp.com/v1
+VITE_BASE_URL=http://157.230.253.165:8000/v1
 #VITE_BASE_URL=http://localhost:3000/v1
 VITE_ENC_KEY=nhntedfgehnyjksfkiue
