chore: update .env

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_BASE_URL=http://157.230.253.165:8000/v1
-#VITE_BASE_URL=http://localhost:3000/v1
-VITE_ENC_KEY=nhntedfgehnyjksfkiue
+VITE_BASE_URL=http://localhost:3000/v1
+VITE_ENC_KEY=asdfjhj3hewfjashdfh
