chore: start server using serve

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,8 @@ jobs:
       - name: Build Code
         run: npm run build
 
+      - name: Start server
+        run: pm2 serve dist -p 8080
       - name: Successfully
         run: |
           echo "Server Updated!"
