--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:staging": "vite --mode staging",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "pm2 start blog_frontend"
+    "start": "pm2 start blog_frontend",
+    "serve": "serve ./dist 8080"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
