--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - uses: actions/checkout@v3
       - name: clean dist dir
         run: |
           rm -rf dist
