--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,8 @@
 name: Blog CI
 
 on:
-  release:
+  pull_request:
     branches: ['main']
-    types:
-      - 'published'
 
 jobs:
   install-deps-and-build:
